[project]
name = "jpdb-review-history"
version = "0.1.0"
description = "Print your jpdb.io vocabulary review history as a flat, sorted list"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "rich>=15.0.0",
]

[project.scripts]
jpdb-review-history = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["main.py"]
